compiler/weave_syntax/tests/data/syntax/recovery/error_in_block.error
error: Unexpected tokens
        --> <source>:9:14
         |
       9 |         var a.b.c = 42;
         |              ^^^^^^^^^^
error: Expected '}'
        --> <source>:18:1
         |
      18 | 
         | ^
