compiler/weave_syntax/tests/data/syntax/recovery/error_in_block.source
public extend Foo
{
    public function ThisWorks() -> ()
    {
    }

    public function MakeError()
    {
        var a.b.c = 42;
    }

    public function ShouldWork()
    {
        self.a.b.c = 42;
    }

    // missing '}'
